<resources>
    <string name="app_name">FlavourDash</string>
    <string name="web_client_id">717229773104-rp5cg2ncr8e1rm850p4dqnfqr8cseceh.apps.googleusercontent.com</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="resend_in">Resend in %1$d seconds</string>
    <string name="resend_code">Resend Code</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="map_id">1c770544e4d2ba71</string>
    <string name="select_a_location">Select A Location</string>
    <string name="confirm_delivery_location">Confirm Delivery Location</string>
    <string name="your_selected_branch_location">Your Selected Branch Location</string>
    <string name="add_delivery_location">Add Delivery Location</string>
    <string name="flavour_dash">Flavour Dash</string>
    <string name="savor_the_moment_we_deliver_the_flavor">Savor the Moment, We Deliver the Flavor!</string>
    <string name="get_started">Get Started</string>
    <string name="search">Search</string>
    <string name="list_view">List View</string>
    <string name="filters">Filters</string>
    <string name="customer_login_image">Customer login image</string>
    <string name="number_verification_image">Number verification image</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="we_ve_sent_you_a_code_by_sms_to_phone_number">We\'ve sent you a code by SMS to phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_number">Change Number</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="_1_3k_ratings">1.3k ratings</string>
    <string name="choose_size">Choose Size</string>
    <string name="choose_options">Choose Options</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="update_email_address">Update Email Address</string>
    <string name="enter_current_email_address">Enter Current Email Address</string>
    <string name="password">Password</string>
    <string name="enter_new_email_address">Enter New Email Address</string>
    <string name="update_email">Update Email</string>
    <string name="update_general_details">Update General Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update_details">Update Details</string>
    <string name="update_mobile_number">Update Mobile Number</string>
    <string name="enter_new_mobile_number">Enter New Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="password_update">Password Update</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="name_a_z">Name: A-z</string>
    <string name="name_z_a">Name: Z-a</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="name_low_to_high">Name: Low to High</string>
    <string name="category_a_z">Category: A-z</string>
    <string name="sub_category_a_z">Sub-Category: A-z</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="view_all">View All</string>
    <string name="rs">Rs.</string>
    <string name="dish_portion_name">Dish Portion Name</string>
    <string name="dish_portion_price">Dish Portion Price</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="your_selected_location">Your Selected Location</string>
    <string name="select_location">Select Location</string>
    <string name="total_price">Total Price :</string>
    <string name="_0_00">0.00</string>
    <string name="enter_you_order_requests">Enter You Order Requests</string>
    <string name="enter_cooking_requests">Enter Cooking Requests</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="what_s_on_your_mind">WHAT\'S ON YOUR MIND</string>
    <string name="select_from_categories">SELECT FROM CATEGORIES</string>
    <string name="filter">Filter</string>
    <string name="order_history">Order History</string>
    <string name="ongoing_order_view">Ongoing Order View</string>
    <string name="my_profile">My Profile</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_wiith">Or Sign In Wiith</string>
    <string name="google_sign_in_image">Google sign in image</string>
    <string name="microsoft_sign_in_image">Microsoft sign in image</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="the_flavourdash_policy_content">I agree to the Terms of Use and understand that my information will be used as described on this page and the FlavourDash policy.</string>
    <string name="x1">x1</string>
    <string name="order_id">Order Id:</string>
    <string name="status">Status :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="address">Address :</string>
    <string name="ordered_time">Ordered Time:</string>
    <string name="special_requests">Special Requests:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch_location_direction">Branch Location Direction</string>


</resources>