<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/number"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/_1"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <com.ouattararomuald.slider.ImageSlider
        android:id="@+id/orderedDishImageSlider"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/orderedDishName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="100"
        android:text="@string/name"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <TextView
        android:id="@+id/orderedDishQuantity"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/x1"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <TextView
        android:id="@+id/orderedDishPrice"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="?attr/textAppearanceBodyMedium" />


</androidx.appcompat.widget.LinearLayoutCompat>