<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CartFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/select_your_location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/estimatedTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_time"
            android:textColor="@color/quantum_yellow900"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/selectedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_selected_location"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/selectLocation"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_location"
            android:layout_marginVertical="5dp"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/total_price"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/totalAmountSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsblack"
                android:text="Rs."
                android:textAlignment="textEnd"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/totalAmountView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/poppinsblack"
                android:text="@string/_0_00"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/enter_you_order_requests"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cooking_requests"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/orderBtn"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/place_your_order"
            android:layout_marginTop="15dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>